Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
 <p>Udemy 코틀린 안드로이드 시작하기! 강좌의 샘플 자료입니다.</p>
 
 <h2>
+<a id="강의-듣기" class="anchor" href="#%EA%B0%95%EC%9D%98-%EB%93%A3%EA%B8%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>강의 듣기</h2>
+
+<ul>
+<li><a href="https://www.udemy.com/the_next_android_kotlin/learn/v4/overview">Kotlin 안드로이드 시작하기!</a></li>
+</ul>
+
+<h2>
 <a id="강의-자료" class="anchor" href="#%EA%B0%95%EC%9D%98-%EC%9E%90%EB%A3%8C" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>강의 자료</h2>
 
 <ul>
@@ -165,8 +172,8 @@
 </thead>
 <tbody>
 <tr>
-<td align="center"><img src="images/sample_java_01.png" alt="sample_java_01"></td>
-<td align="center"><img src="images/sample_java_02.png" alt="sample_java_02"></td>
+<td align="center"><img src="images/view/sample_java_01.png" alt="sample_java_01"></td>
+<td align="center"><img src="images/view/sample_java_02.png" alt="sample_java_02"></td>
 </tr>
 </tbody>
 </table>
@@ -183,12 +190,12 @@
 </thead>
 <tbody>
 <tr>
-<td align="center"><img src="images/sample_kotlin_01.png" alt="sample_kotlin_01"></td>
-<td align="center"><img src="images/sample_kotlin_02.png" alt="sample_kotlin_02"></td>
+<td align="center"><img src="images/view/sample_kotlin_01.png" alt="sample_kotlin_01"></td>
+<td align="center"><img src="images/view/sample_kotlin_02.png" alt="sample_kotlin_02"></td>
 </tr>
 <tr>
-<td align="center"><img src="images/sample_kotlin_03.png" alt="sample_kotlin_03"></td>
-<td align="center"><img src="images/sample_kotlin_04.png" alt="sample_kotlin_04"></td>
+<td align="center"><img src="images/view/sample_kotlin_03.png" alt="sample_kotlin_03"></td>
+<td align="center"><img src="images/view/sample_kotlin_04.png" alt="sample_kotlin_04"></td>
 </tr>
 </tbody>
 </table>
@@ -196,12 +203,12 @@
 <h2>
 <a id="kotlin-blur-sample" class="anchor" href="#kotlin-blur-sample" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kotlin blur sample</h2>
 
-<p><img src="images/blur_sample.png" alt="blur_sample"></p>
+<p><img src="images/view/blur_sample.png" alt="blur_sample"></p>
 
 <h2>
 <a id="kotlin-bottom-sheet" class="anchor" href="#kotlin-bottom-sheet" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kotlin bottom sheet</h2>
 
-<p><img src="images/sample_kotlin_anim.gif" alt="sample_kotlin_anim"></p>
+<p><img src="images/view/sample_kotlin_anim.gif" alt="sample_kotlin_anim"></p>
 
 <h2>
 <a id="ui-test" class="anchor" href="#ui-test" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>UI Test</h2>
@@ -210,19 +217,19 @@
 <li>RecyclerView item click test</li>
 </ul>
 
-<p><img src="images/ui_test_03.gif" alt="ui_test_03"></p>
+<p><img src="images/view/ui_test_03.gif" alt="ui_test_03"></p>
 
 <ul>
 <li>Test RecyclerView and Detail page</li>
 </ul>
 
-<p><img src="images/ui_test_01.gif" alt="ui_test_01"></p>
+<p><img src="images/view/ui_test_01.gif" alt="ui_test_01"></p>
 
 <ul>
 <li>Menu test</li>
 </ul>
 
-<p><img src="images/ui_test_02.gif" alt="ui_test_02"></p>
+<p><img src="images/view/ui_test_02.gif" alt="ui_test_02"></p>
 
 <h2>
 <a id="ui-test-references" class="anchor" href="#ui-test-references" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>UI Test References</h2>
@@ -314,7 +321,7 @@
 <h2>
 <a id="load-실패가-발생할-경우" class="anchor" href="#load-%EC%8B%A4%ED%8C%A8%EA%B0%80-%EB%B0%9C%EC%83%9D%ED%95%A0-%EA%B2%BD%EC%9A%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Load 실패가 발생할 경우</h2>
 
-<p><img src="images/load_fail.png" alt="load_fail"></p>
+<p><img src="images/view/load_fail.png" alt="load_fail"></p>
 
 <p>위와 같은 화면을 확인하였다면 다음의 순서대로 따라주세요.</p>
 
@@ -324,21 +331,21 @@
 
 <ul>
 <li>다음의 페이지에서 01. <code>API 키 요청</code>을 눌러주세요.
-<img src="images/flickr_01.png" alt="flickr_01">
+<img src="images/view/flickr_01.png" alt="flickr_01">
 </li>
 <li>
 <code>비상업용 키 신청</code>을 눌러주세요.
-<img src="images/flickr_02.png" alt="flickr_02">
+<img src="images/view/flickr_02.png" alt="flickr_02">
 </li>
 <li>App의 이름과 설명을 간단하게 작성해주세요.
-<img src="images/flickr_03.png" alt="flickr_03">
+<img src="images/view/flickr_03.png" alt="flickr_03">
 </li>
 <li>App 키가 발급되었습니다.
-<img src="images/flickr_04.png" alt="flickr_04">
+<img src="images/view/flickr_04.png" alt="flickr_04">
 </li>
 <li>발급받은 APP 키를 <code>local.properties</code>에 아래와 같이 추가하세요.
 <code>flickrApiKey="발급 받은 키"</code>
-<img src="images/flickr_05.png" alt="flickr_05">
+<img src="images/view/flickr_05.png" alt="flickr_05">
 </li>
 </ul>
 </li>
